FIxed overflow bug

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -164,6 +164,76 @@ h3 {
     -webkit-transform: translate3d(0, 0, 0);
 }
 
+/* Scroll down arrow */
+
+.arrow {
+    width: 2.1rem;
+    height: 100px;
+    top: 80vh;
+    left: calc(50vw - 1.05rem);
+    position: absolute;
+    z-index: 9999;
+}
+
+.chevron {
+    position: absolute;
+    width: 2.1rem;
+    height: 0.48rem;
+    opacity: 0;
+    transform: scale(0.3);
+    animation: move-chevron 3s ease-out infinite;
+}
+
+.chevron:first-child {
+    animation: move-chevron 3s ease-out 1s infinite;
+}
+
+.chevron:nth-child(2) {
+    animation: move-chevron 3s ease-out 2s infinite;
+}
+
+.chevron:before,
+.chevron:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    height: 100%;
+    width: 50%;
+    background: white;
+}
+
+.chevron:before {
+    left: 0;
+    transform: skewY(30deg);
+}
+
+.chevron:after {
+    right: 0;
+    width: 50%;
+    transform: skewY(-30deg);
+}
+
+@keyframes move-chevron {
+    25% {
+        opacity: 1;
+    }
+
+    33.3% {
+        opacity: 1;
+        transform: translateY(2.28rem);
+    }
+
+    66.6% {
+        opacity: 1;
+        transform: translateY(3.12rem);
+    }
+
+    100% {
+        opacity: 0;
+        transform: translateY(4.8rem) scale(0.5);
+    }
+}
+
 .menu #menu-text {
     float: left;
     position: fixed;
@@ -321,6 +391,7 @@ label a {
 
 .container {
     width: 100%;
+    overflow: hidden;
     position: absolute;
     display: grid;
     grid-template-areas:
@@ -363,7 +434,7 @@ label a {
 }
 
 .skills-bar-container li {
-    position: relative;
+    /* position: absolute; */
     width: 100%;
     padding: 5px;
     margin-bottom: 10px;
@@ -650,7 +721,7 @@ section .left p {
 
     .about {
         grid-template-columns: auto;
-        height: calc(100vh - 40px);
+        min-height: calc(100vh - 40px);
     }
 
     .about .right {
@@ -661,7 +732,7 @@ section .left p {
 
     .skills {
         grid-template-columns: auto;
-        height: calc(100vh - 40px);
+        min-height: calc(100vh - 40px);
     }
 
     .skills-bar-container {
